[gd_scene load_steps=6 format=3 uid="uid://bxv24mjcranba"]

[ext_resource type="Script" uid="uid://b0iyafva2jgrt" path="res://Games/Super Bit Boy/Scenes/Player/bit_boy_player.gd" id="1_pr5ix"]

[sub_resource type="RectangleShape2D" id="RectangleShape2D_adjwb"]
size = Vector2(32, 32)

[sub_resource type="Gradient" id="Gradient_njy6s"]
offsets = PackedFloat32Array(1)
colors = PackedColorArray(1, 1, 1, 1)

[sub_resource type="GradientTexture1D" id="GradientTexture1D_fxqk7"]
gradient = SubResource("Gradient_njy6s")
width = 32

[sub_resource type="RectangleShape2D" id="RectangleShape2D_nc7re"]
size = Vector2(10, 30)

[node name="Player" type="CharacterBody2D"]
script = ExtResource("1_pr5ix")

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
shape = SubResource("RectangleShape2D_adjwb")

[node name="Sprite2D" type="Sprite2D" parent="."]
scale = Vector2(1, 32)
texture = SubResource("GradientTexture1D_fxqk7")

[node name="Wall Jump Areas" type="Node2D" parent="."]

[node name="LeftWallJumpArea2D" type="Area2D" parent="Wall Jump Areas"]

[node name="CollisionShape2D" type="CollisionShape2D" parent="Wall Jump Areas/LeftWallJumpArea2D"]
position = Vector2(-18, 0)
shape = SubResource("RectangleShape2D_nc7re")

[node name="RightWallJumpArea2D" type="Area2D" parent="Wall Jump Areas"]

[node name="CollisionShape2D" type="CollisionShape2D" parent="Wall Jump Areas/RightWallJumpArea2D"]
position = Vector2(18, 0)
shape = SubResource("RectangleShape2D_nc7re")

[connection signal="body_entered" from="Wall Jump Areas/LeftWallJumpArea2D" to="." method="_on_left_wall_jump_area_2d_body_entered"]
[connection signal="body_exited" from="Wall Jump Areas/LeftWallJumpArea2D" to="." method="_on_left_wall_jump_area_2d_body_exited"]
[connection signal="body_entered" from="Wall Jump Areas/RightWallJumpArea2D" to="." method="_on_right_wall_jump_area_2d_body_entered"]
[connection signal="body_exited" from="Wall Jump Areas/RightWallJumpArea2D" to="." method="_on_right_wall_jump_area_2d_body_exited"]
